# rsomics-vcf-gtcheck

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  gtcheck.rs  lib.rs
tests/: compat.rs  json_envelope.rs
tests/golden/: gt3.vcf  gt3_default.expected  gt3_e0_nohwe.expected  hap.vcf  hap_default.expected  hap_e0.expected  mixed_default.expected  panel.vcf  panel_default.expected  panel_e0.expected  pl.vcf  pl_default.expected  pl_e0.expected  qpl.vcf  query.vcf
